--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
           "cmdk": "^1.1.1",
           "embla-carousel-react": "^8.6.0",
           "input-otp": "^1.4.2",
-          "jsr:": "^supabase",
+          "@supabase/supabase-js": "^2.48.0",
           "lucide-react": "^0.487.0",
           "motion": "*",
           "next-themes": "^0.4.6",
-          "npm:google-auth-library": "*",
-          "npm:hono": "*",
+          "google-auth-library": "*",
+          "hono": "*",
           "react": "^18.3.1",
           "react-day-picker": "^8.10.1",
           "react-dom": "^18.3.1",
